# Yazio-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  n8n_workflow.json  pyproject.toml
app/: main.py
app/data/: custom_weights.json
app/services/: gemini_service.py  mammouth_service.py  yazio_service.py
